# quant-hikyuu

./: .gitignore  README.md  app.py  backtest_demo.py  config.py  demo.py  main.py  pyproject.toml  requirements.txt
backtest/: __init__.py  engine.py
display_module/: __init__.py  display.py
portfolio_module/: __init__.py  portfolio.py
strategies/: __init__.py  all_strategies.py  ema_cross_strategy.py  macd_strategy.py
