[project]
name = "quant-hikyuu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "akshare==1.18.12",
    "altair==6.0.0",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "blosc2==3.12.2",
    "bokeh==3.8.2",
    "cachetools==6.2.4",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "clickhouse-connect==0.10.0",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cryptography==46.0.3",
    "curl-cffi==0.14.0",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "et-xmlfile==2.0.0",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "greenlet==3.3.0",
    "h5py==3.15.1",
    "hikyuu==2.7.3",
    "html5lib==1.1",
    "idna==3.11",
    "jinja2==3.1.6",
    "jsonpath==0.82.2",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "lxml==6.0.2",
    "lz4==4.4.5",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mini-racer==0.14.0",
    "msgpack==1.1.2",
    "multidict==6.7.0",
    "mysql-connector-python==9.5.0",
    "narwhals==2.15.0",
    "ndindex==1.10.1",
    "nest-asyncio==1.6.0",
    "numexpr==2.14.1",
    "numpy==2.4.1",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.1.0",
    "pipdeptree==2.30.0",
    "platformdirs==4.5.1",
    "prettytable==3.17.0",
    "propcache==0.4.1",
    "protobuf==6.33.4",
    "py-cpuinfo==9.0.0",
    "pyarrow==22.0.0",
    "pycparser==2.23",
    "pydeck==0.9.1",
    "pyecharts==2.0.9",
    "pynng==0.8.1",
    "pyparsing==3.3.1",
    "pyperclip==1.11.0",
    "pyside6==6.10.1",
    "pyside6-addons==6.10.1",
    "pyside6-essentials==6.10.1",
    "pytdx==1.72",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "seaborn==0.13.2",
    "shiboken6==6.10.1",
    "simplejson==3.20.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8.1",
    "sqlalchemy==2.0.45",
    "streamlit==1.52.2",
    "tables==3.10.2",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
    "xlrd==2.0.2",
    "xyzservices==2025.11.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]
